--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     }
     .navbar{
         display: flex;
-        padding: 26px 30px;
+        padding: 10px 30px;
     }
     .nav-list{
     width: 100%;
@@ -34,9 +34,9 @@
         font-size: medium;
         padding-right: 50px;
     }
-    p.quotes{
-        text-align: right;
-        font-family:Arial, Helvetica, sans-serif;
+    .top p{
+        display: flex;
+        justify-content: right;
         font-style: italic;
         font-weight: lighter;
     }
@@ -48,49 +48,58 @@
     .top{
         padding: 8px;
     }
-.grid-container{
-display: grid;
-grid-template-columns:auto;
-grid-template-rows: auto;
-gap: 5px;
-grid-auto-rows: 90px;
-grid-template-areas: 
-"a a a a b b b b" "a a a a b b b b"
-"c c c c d d d d" "c c c c d d d d"    ;
-align-self:start; 
-padding-block: 100px;                    
-}
-.grid-item1{
-    grid-area: a;
-    justify-self: center;
-    border: 2px solid #ffa31a;
-    border-radius: 5px;
-    padding: 1em;
-}
-.grid-item1 a{
-    text-align: center;
-}
-.grid-item2{
-    grid-area: b;
-    justify-self: center;
-    border: 2px solid #ffa31a;
-    border-radius: 5px;
-    padding: 1em;
-}
-.grid-item3{
-    grid-area: c;
-    justify-self: center;
-    border: 2px solid #ffa31a;
-    border-radius: 5px;
-    padding: 1em ;
-}
-.grid-item4{
-    grid-area: d;
-    justify-self: center;
-    border: 2px solid #ffa31a;
-    border-radius: 5px;
-    padding: 1em;
-}
+    .flex-container{
+     display: flex ;
+     justify-content: center;
+     padding: 30px;
+    }
+    .flex-1{
+        margin: 50px;
+    }
+    .ed {
+        text-transform: capitalize;
+        margin: 50px;
+        padding: 10px;
+        border: 2px solid black;
+        border-radius: 10px;
+        box-shadow: 5px 5px #ffa31a;
+    }  
+    .lit{
+        margin: 50px;
+        padding: 10px;
+        border: 2px solid black;
+        border-radius: 10px;
+        box-shadow: 5px 5px #ffa31a;
+    }
+    .flex-1 li a{
+        text-decoration: none;
+        font-family:Arial, Helvetica, sans-serif ;
+        font-size: medium;
+        color: black;
+    }
+    .flex-2{
+        margin: 50px;
+    }
+    .rel{
+        margin: 50px;
+        padding: 10px;
+        border: 2px solid black;
+        border-radius: 10px;
+        box-shadow: 5px 5px #ffa31a;
+    }
+    .mis{
+        margin: 50px;
+        padding: 10px;
+        border: 2px solid black;
+        border-radius: 10px;
+        box-shadow: 5px 5px #ffa31a;
+    }
+    .flex-2 li a{
+        text-decoration: none;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: medium;
+        color: black;
+    }
 .footer-container{
     max-width: 800px;
 	margin:auto;
@@ -182,4 +191,58 @@ ul{
     margin: 0 10px 10px 0;
     padding-left: 230px;
     padding-top: 100px;
+}
+.form-container{
+    display: block;
+    font-family: Arial, Helvetica, sans-serif;
+    max-width: 300px;
+}
+.title{
+ font-size: medium;
+ font-family: Arial, Helvetica, sans-serif;
+ font-weight: bold;
+ position: relative;
+ padding: 3px;
+}
+.input-box1{
+    padding: 2px;
+}
+.input-box2{
+    padding: 2px;
+}
+.input-box3{
+    padding: 2px;
+}
+.input-box4{
+    padding: 2px;
+}
+.button{
+    padding: 2px;
+}
+.team{
+    display: flex;
+    justify-content: center;
+}
+.our-team{
+    display: flex;
+    justify-content: center;
+}
+#photo{
+    border:1px solid #ffa31a;
+    border-radius: 100px;
+}
+.kripesh{
+    padding: 15px;
+}
+.adarsha{
+    padding: 15px;
+}
+.ashish{
+    padding: 15px;
+}
+.sameen{
+    padding: 15px;
+}
+.our-team .social-links{
+
 }
